# walking-skeleton-addon

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  manifest.json  requirements.txt
.devcontainer/: devcontainer.json
classifier/: classifier.ipynb
control/backend/: index.js
control/frontend/: package-lock.json
control/frontend/public/: index.html
control/frontend/src/: App.js
extension/: Makefile  manifest.json
extension/classifier/: classifier.ipynb
extension/classifier/model/: keras_metadata.pb  saved_model.pb
extension/classifier/model/variables/: variables.index
extension/content_scripts/: macro_railroad_ext.js  main.js
extension/wasm/: macro_railroad_ext.wasm
extension/wasm_src/: Cargo.toml
extension/wasm_src/src/: lib.rs
extension/webpack/: package-lock.json
extension/webpack/src/: index.js
logger/: README.md
logger/extension/: borderify.js  manifest.json
logger/extension/model/output/: model.json
logger/extension/webpack/: package-lock.json  package.json
logger/extension/webpack/src/: index.js
src/: lib.rs
wasm/: wasm_game_of_life.wasm
www/: background_script.js  bootstrap.js  index.html  index.js  manifest.json  package-lock.json  package.json  wasm_game_of_life.js  webpack.config.js
