[package]
name = "macro_railroad_ext"
version = "0.1.0"
authors = ["Lukas Lueg <lukas.lueg@gmail.com>"]
build = "build.rs"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
railroad = "0.1"
macro_railroad = "0.1"
serde = { version = "^1.0.59", features = ["derive"] }
serde_json = "^1.0.51"
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png", "gif"] }
tract-tensorflow = "0.6.3"
tract-onnx = "0.18.1"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.4"



# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying. However, we don't actually care all that much about 
# code-size.
#console_error_panic_hook = "0.1"

[build-dependencies]
built = { version = "0.5", features = ["chrono"], default_features = false }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
